--- a/theme.yaml
+++ b/theme.yaml
@@ -1,7 +1,7 @@
 apiVersion: theme.halo.run/v1alpha1
 kind: Theme
 metadata:
-  name: theme-Stack2
+  name: theme-stacked
 spec:
   customTemplates:
     page:
@@ -24,5 +24,5 @@ spec:
   repo: "https://github.com/jiewenhuang/halo-theme-stack"
   settingName: "theme-Stack2-setting"
   configMapName: "theme-Stack2-configMap"
-  version: "2.2.6-1"
+  version: "2.2.6"
   requires: ">=2.17.0"
