--- a/theme.yaml
+++ b/theme.yaml
@@ -14,7 +14,7 @@ spec:
         screenshot:
         file: page_search.html
 
-  displayName: Theme-Stack
+  displayName: Theme-Stacked
   author:
     name: Jiewenhuang
     website: "https://Jiewen.run"
@@ -24,5 +24,5 @@ spec:
   repo: "https://github.com/jiewenhuang/halo-theme-stack"
   settingName: "theme-Stack2-setting"
   configMapName: "theme-Stack2-configMap"
-  version: "2.2.6"
+  version: "2.2.61"
   requires: ">=2.17.0"
